CHANGELOG

2.0.24
UTILS:
* pa_application-edit | class App method filteredApps() - introduce filter based on characeristics

BUGFIX:

GENERAL:


2.0.23 (20211121)
UTILS:
* pa_rule-merger - extend argument additionalmatch with 'secprof'
* pa_address-edit | introduce new reference filters
* pa_device-edit - extend manageddevice information if PAN-OS API is used
* pa_device-edit | introduce actions=exportInventoryToExcel / exportLicenseToExcport devicetype=manageddevice
* pa_rule-edit | actions=display:resolveServiceSummary shadow-json - if service is.application-default and app is.any => do service resolve to default app protocol port
* pa_rule-stats | optimised if arguments "cycleconnectedfirewalls" to display FW model
* pa_device-edit | introduce actions=display-shadowrule
* pa_device-edit - introduce actions=securityprofile-create-alert-only | until now working only against VSYS or DG - use filter=(name eq XYZ) to define where to create / no PAN-OS API mode supported yet
* pa_device-edit - optimise actions=securityprofile-create-alert-only[:true] - introduce bool argument [shared], if set to true profiles are create at SHARED level
* UTIL introduce Palo Alto Networks max FW object counters in JSON format
* pa_application-edit / pa_rule-edit actions=display:ResolveApplicationSummary|ResolveServiceSummary code reduction / optiisation
* pa_application-edit | introduce App Tag from PAN-OS - introduce 'filter=(apptag has XYZ)'

BUGFIX:
*  all utils script - bugfix if Panorama config is used with loadpanoramapushedconfig
* pa_rule-edit - bugfix for actions=display:resolveservicesummary - if service is.application-default and app has application.filter
* pa_address-merger | bugfix if for DG duplicate value is available on childDG and parentDG [thanks to Necip Cebeci ]
* pa_rule-edit | bugfix for actions=display:ResolveServiceSummar|ResolveApplicationSummary - fix memory leak

GENERAL: