@@ -286,6 +286,14 @@ class DeviceGroup
         $this->addressStore->load_addressgroups_from_domxml($tmp);
         // End of address groups extraction
 
+        //
+        // Extract region objects
+        //
+        $tmp = DH::findFirstElement('region', $xml);
+        if( $tmp !== false )
+            $this->addressStore->load_regions_from_domxml($tmp);
+        //print "VSYS '".$this->name."' address objectsloaded\n" ;
+        // End of address objects extraction
 
         //												//
         // Extract service objects in this VirtualSystem			//
