@@ -386,6 +386,15 @@ class PanoramaConf
         // End of address groups extraction
 
         //
+        // Extract region objects
+        //
+        $tmp = DH::findFirstElement('region', $xml);
+        if( $tmp !== false )
+            $this->addressStore->load_regions_from_domxml($tmp);
+        //print "VSYS '".$this->name."' address objectsloaded\n" ;
+        // End of address objects extraction
+
+        //
         // Extract services
         //
         $tmp = DH::findFirstElementOrCreate('service', $this->sharedroot);
